--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ license = "MIT"
 image = { version = "0.25", features = ["jpeg", "png", "webp", "tiff", "gif", "bmp"] }
 imageproc = "0.23"
 rayon = "1.10"
-kamadak-exif = "0.6.1"
+exif = "0.10"
+#kamadak-exif = "0.6.1"
 clap = { version = "4.0", features = ["derive"] }
 walkdir = "2.5"
 log = "0.4"
