--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ clap = { version = "4.0", features = ["derive"] }
 walkdir = "2.5"
 log = "0.4"
 env_logger = "0.11"
-indicatif = "0.17"
+indicatif = { version = "0.17", default-features = false, features = ["rayon"] }
 anyhow = "1.0"  
 thiserror = "1.0"
 oxipng = "9.0"  
